/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2014 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2015-04-04 Janusz Dobrowolski  Fixed hidden fields support for ajax driven divs.
2015-04-03 Joe                 Release 2.3.24
2015-04-03 Janusz Dobrowolski  Additional fix for Windows specific issue in access roles editor.

2015-03-23 16:27 +0100 Joe
(3456) Release 2.3.23
 version.php

2015-03-14 16:05 +0100 Janusz Dobrowolski
(3455) Additional cleanups in standard themes.
 themes/aqua/renderer.php
 themes/cool/renderer.php
 themes/default/renderer.php

2015-03-12 13:00 +0100 Janusz Dobrowolski
(3454) Fixed many issues in output HTML code according to HTML 4.01 Transitional format.
 access/login.php
 access/logout.php
 access/password_reset.php
 admin/create_coy.php
 admin/crm_categories.php
 admin/db/attachments_db.inc
 admin/inst_upgrade.php
 admin/security_roles.php
 gl/gl_bank.php
 gl/gl_journal.php
 gl/includes/ui/gl_bank_ui.inc
 gl/includes/ui/gl_journal_ui.inc
 gl/inquiry/balance_sheet.php
 gl/inquiry/profit_loss.php
 gl/view/bank_transfer_view.php
 gl/view/gl_deposit_view.php
 gl/view/gl_payment_view.php
 gl/view/gl_trans_view.php
 includes/page/footer.inc
 includes/page/header.inc
 includes/system_tests.inc
 includes/ui/allocation_cart.inc
 includes/ui/contacts_view.inc
 includes/ui/db_pager_view.inc
 includes/ui/ui_controls.inc
 includes/ui/ui_input.inc
 includes/ui/ui_lists.inc
 includes/ui/ui_msgs.inc
 includes/ui/ui_view.inc
 includes/ui/view_package.php
 install/index.php
 inventory/adjustments.php
 inventory/includes/item_adjustments_ui.inc
 inventory/includes/stock_transfers_ui.inc
 inventory/manage/item_categories.php
 inventory/manage/item_codes.php
 inventory/manage/item_units.php
 inventory/manage/movement_types.php
 inventory/manage/sales_kits.php
 inventory/prices.php