@@ -29,7 +29,7 @@ include_once($path_to_root . "/inventory/includes/db/items_category_db.inc");
 
 print_inventory_sales();
 
-function getTransactions($category, $location, $fromcust, $from, $to)
+function getTransactions($category, $location, $fromcust, $from, $to, $show_service)
 {
 	$from = date2sql($from);
 	$to = date2sql($to);
@@ -37,6 +37,7 @@ function getTransactions($category, $location, $fromcust, $from, $to)
 			".TB_PREF."stock_category.description AS cat_description,
 			".TB_PREF."stock_master.stock_id,
 			".TB_PREF."stock_master.description, ".TB_PREF."stock_master.inactive,
+			".TB_PREF."stock_master.mb_flag,
 			".TB_PREF."stock_moves.loc_code,
 			".TB_PREF."debtor_trans.debtor_no,
 			".TB_PREF."debtors_master.name AS debtor_name,
@@ -56,8 +57,9 @@ function getTransactions($category, $location, $fromcust, $from, $to)
 		AND ".TB_PREF."stock_moves.trans_no=".TB_PREF."debtor_trans.trans_no
 		AND ".TB_PREF."stock_moves.tran_date>='$from'
 		AND ".TB_PREF."stock_moves.tran_date<='$to'
-		AND (".TB_PREF."debtor_trans.type=".ST_CUSTDELIVERY." OR ".TB_PREF."stock_moves.type=".ST_CUSTCREDIT.")
-		AND (".TB_PREF."stock_master.mb_flag='B' OR ".TB_PREF."stock_master.mb_flag='M')";
+		AND (".TB_PREF."debtor_trans.type=".ST_CUSTDELIVERY." OR ".TB_PREF."stock_moves.type=".ST_CUSTCREDIT.")";
+		if (!$show_service)
+			$sql .= " AND (".TB_PREF."stock_master.mb_flag='B' OR ".TB_PREF."stock_master.mb_flag='M')";
 		if ($category != 0)
 			$sql .= " AND ".TB_PREF."stock_master.category_id = ".db_escape($category);
 		if ($location != '')
@@ -81,9 +83,10 @@ function print_inventory_sales()
     $category = $_POST['PARAM_2'];
     $location = $_POST['PARAM_3'];
     $fromcust = $_POST['PARAM_4'];
-	$comments = $_POST['PARAM_5'];
-	$orientation = $_POST['PARAM_6'];
-	$destination = $_POST['PARAM_7'];
+	$show_service = $_POST['PARAM_5'];
+	$comments = $_POST['PARAM_6'];
+	$orientation = $_POST['PARAM_7'];
+	$destination = $_POST['PARAM_8'];
 	if ($destination)
 		include_once($path_to_root . "/reporting/includes/excel_report.inc");
 	else
@@ -108,6 +111,8 @@ function print_inventory_sales()
 		$fromc = _('All');
 	else
 		$fromc = get_customer_name($fromcust);
+	if ($show_service) $show_service_items = _('Yes');
+	else $show_service_items = _('No');
 
 	$cols = array(0, 75, 175, 250, 300, 375, 450,	515);
 
@@ -121,7 +126,8 @@ function print_inventory_sales()
     				    1 => array('text' => _('Period'),'from' => $from, 'to' => $to),
     				    2 => array('text' => _('Category'), 'from' => $cat, 'to' => ''),
     				    3 => array('text' => _('Location'), 'from' => $loc, 'to' => ''),
-    				    4 => array('text' => _('Customer'), 'from' => $fromc, 'to' => ''));
+    				    4 => array('text' => _('Customer'), 'from' => $fromc, 'to' => ''),
+    				    5 => array('text' => _('Show Service Items'), 'from' => $show_service_items, 'to' => ''));
 
     $rep = new FrontReport(_('Inventory Sales Report'), "InventorySalesReport", user_pagesize(), 9, $orientation);
    	if ($orientation == 'L')
@@ -131,7 +137,7 @@ function print_inventory_sales()
     $rep->Info($params, $cols, $headers, $aligns);
     $rep->NewPage();
 
-	$res = getTransactions($category, $location, $fromcust, $from, $to);
+	$res = getTransactions($category, $location, $fromcust, $from, $to, $show_service);
 	$total = $grandtotal = 0.0;
 	$total1 = $grandtotal1 = 0.0;
 	$total2 = $grandtotal2 = 0.0;
@@ -174,7 +180,10 @@ function print_inventory_sales()
 			$rep->TextCol(1, 3, $trans['description'].($trans['inactive']==1 ? " ("._("Inactive").")" : ""), -1);
 		$rep->AmountCol(3, 4, $trans['qty'], get_qty_dec($trans['stock_id']));
 		$rep->AmountCol(4, 5, $trans['amt'], $dec);
-		$rep->AmountCol(5, 6, $trans['cost'], $dec);
+		if (is_service($trans['mb_flag']))
+			$rep->TextCol(5, 6, "---");
+		else	
+			$rep->AmountCol(5, 6, $trans['cost'], $dec);
 		$rep->AmountCol(6, 7, $cb, $dec);
 		$rep->fontSize += 2;
 		$total += $trans['amt'];
