@@ -10,6 +10,7 @@
 ------------
 This is a changelog for FrontAccounting All releases.
 
+2015-04-11 Joe                 Included option for Show Service Items in Inventory Sales Report
 2015-04-04 Janusz Dobrowolski  Fixed hidden fields support for ajax driven divs.
 2015-04-03 Joe                 Release 2.3.24
 2015-04-03 Janusz Dobrowolski  Additional fix for Windows specific issue in access roles editor.
